# ascii-camera

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.json  Cargo.toml  README.md  index.html  jsconfig.json  package-lock.json  package.json  pre_build.sh  vercel.json  vite.config.js  vue.config.js
.github/workflows/: deploy-gh.yml  deploy.yml  dry-build.yml  manual.yml
css/: app.f7f77317.css
dev-dist/: sw.js
js/: app.a583767f.js  app.a583767f.js.map  chunk-vendors.b4f7572d.js  chunk-vendors.b4f7572d.js.map
public/: enable-threads.js
rust_src/: Cargo.toml  LICENSE  data_structs.rs  lib.rs  rust-toolchain.toml
rust_src/.cargo/: config.toml
rust_src/effects/: ascii.rs  bin_dither.rs  edge_detection.rs  glitch_dither.rs  heat_map.rs  mod.rs  order_dither.rs
src/: App.vue  camera.js  constants.js  database.js  lib.rs  main.js  store.js  wasm.js
src/assets/styles/: _vars.scss  main.scss
src/components/: AboutView.vue  AllEffects.vue  AsciiHeader.vue  Camera.vue  CameraControls.vue  CameraSettings.vue  CameraView.vue  CheckBox.vue  DropDown.vue  Footer.vue  LibraryView.vue  SimpleArrow.vue  Upload.vue  UploadView.vue
src/helpers/: convertToAscii.js
src/json/: char_map.json
src/lib/: palette.js
src/lib/_old/: painter.js
src/lib/hooks/: index.js
src/lib/hooks/use-camera/: helpers.js  index.js  use-camera.js
src/lib/hooks/use-local-storage/: use-local-storage.js
src/lib/hooks/use-video/: index.js  use-video.js
src/lib/hooks/use-worker/: index.js  use-worker-arr-alt.js  use-worker-arr.js  (+1 more)
src/lib/workers/: draw-worker.js
