[package]
name = "jakes-photo-booth"
version = "0.1.0"
edition = "2021"
description = "Image effects written in Rust for WebAssembly"
repository = "https://github.com/jbukuts/ascii-camera"
license = "MIT"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]
path = './lib.rs'

[dependencies]
wasm-bindgen = "0.2.80"
image = "0.24.2"
imageproc = "0.23.0"
rusttype = "0.9.2"
web-sys = "0.3.57"
js-sys = "0.3.57"
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs", default-features = false, features = ['preset'] }
phf = { version = "0.11", default-features = false, features = ['macros'] }
lazy_static = "*"
